@@ -477,7 +477,6 @@ t/default/lib/SPVM/TestCase/CompileError/Sub/SubNameContainsUnderScoreTwice.spvm
 t/default/lib/SPVM/TestCase/CompileError/Sub/SubNameStartDigit.spvm
 t/default/lib/SPVM/TestCase/CompileError/Subtract/LeftIsNotNumeric.spvm
 t/default/lib/SPVM/TestCase/CompileError/Subtract/RightIsNotNumeric.spvm
-t/default/lib/SPVM/TestCase/CompileError/Switch/NoLastBreak.spvm
 t/default/lib/SPVM/TestCase/CompileError/Syntax/LineNumber.spvm
 t/default/lib/SPVM/TestCase/CompileError/Type/MultiDimensionalAnyObject.spvm
 t/default/lib/SPVM/TestCase/CompileError/Type/MutableNoStringCaseInt.spvm
