@@ -1,9 +1,0 @@
-class TestCase::CompileError::Switch::NoLastBreak {
-  static method main : int () {
-    switch (1) {
-      case 1 : {
-        1;
-      }
-    }
-  }
-}
