@@ -196,6 +196,34 @@ class TestCase::Switch {
           return 0;
         }
       }
+
+      # break is added to the end of the block if it doesn't exist
+      {
+        my $success = 0;
+        switch (1) {
+          case 1: {
+            $success = 1;
+          }
+          case 2: {
+            $success = 2;
+          }
+        }
+        unless ($success == 1) {
+          return 0;
+        }
+      }
+      {
+        my $success = 0;
+        switch (1) {
+          case 1: {}
+          case 2: {
+            $success = 2;
+          }
+        }
+        unless ($success == 0) {
+          return 0;
+        }
+      }
     }
     
     # return statement in the switch statement
